# GoProDVR

./: .gitignore  CMakeLists.txt  GoProDVR.glade  README.md
include/gui/: SeekBar.hpp  URLEntryDialog.hpp  WindowController.hpp
include/player/: Player.hpp
resources/: GoProDVR.glade
spike/: README.md
spike/cmake/simple/: CMakeLists.txt  Makefile  sqrt
spike/cmake/versionNum/: CMakeLists.txt  Makefile  SquareRootConfig.h  SquareRootConfig.h.in  sqrt  sqrt.cpp
spike/gtkmm/: CMakeLists.txt  gtkmmSpike  main.cpp  mainWindow.cpp  mainWindow.h
spike/libvlc/: CMakeLists.txt  libvlcDemo.cpp
spike/libvlcpp/: CMakeLists.txt  main.cpp
spike/opencv/: CMakeLists.txt  Makefile  VideoCapture  videocap.cpp
src/: CMakeLists.txt  main.cpp
src/gui/: GoProDVR.glade  SeekBar.cpp  URLEntryDialog.cpp  WindowController.cpp
src/player/: Player.cpp
